--- a/package.json
+++ b/package.json
@@ -13,23 +13,14 @@
     "@react-three/drei": "^9.106.0",
     "@react-three/fiber": "^8.16.8",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.2.10",
-    "lucide-react": "^0.390.0",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.51.5",
-    "sonner": "^1.4.41",
-    "three": "^0.165.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "tailwindcss": "^3.4.1"
   }
 }
